# github_search

./: .gitignore  HOWTO.org  Procfile  README.md  configure.sh  download_data.sh  env.yaml  experiment.py  guild.yml  pipeline.yaml  prepare_data.py  preprocessing.py  pyproject.toml  pyproject.toml.bkp  requirements.txt  settings.ini  setup.py  topic_modeling_utils.py
GithubSearch/: Manifest.toml  Project.toml  centrality_results.feather  compare_centralities.py  select_repo_signatures.jl
app/: project_retrieval_app.py
conf/: beir_text_col_config.json  dependencies-MiniLM-L6-v2-mnrl  dependencies-MiniLM-L6-v2-mse  dependencies-MiniLM-nbow-mnrl  dependencies-nbow-nbow-mnrl  dependencies-no-embedder-mnrl  dependencies-no-embedder-mse  readme-MiniLM-MiniLM-mnrl  readme-MiniLM-nbow-mnrl  readme-nbow-nbow-mnrl  readmes#dependencies-MiniLM-L6-v2-mnrl  readmes#dependencies-MiniLM-nbow-mnrl  readmes#dependencies-nbow-nbow-mnrl  readmes#dependencies-no-embedder-mnrl  readmes-MiniLM-L6-v2-mnrl  readmes-no-embedder-mnrl  titles#dependencies-MiniLM-L6-v2-mnrl  titles#dependencies-MiniLM-L6-v2-mse  titles#dependencies-MiniLM-nbow-mse  titles#dependencies-nbow-nbow-mnrl  titles#dependencies-no-embedder-mnrl  titles#dependencies-no-embedder-mse  titles-MiniLM-L6-v2-mnrl  titles-MiniLM-L6-v2-mse  titles-MiniLM-MiniLM-mnrl  titles-MiniLM-MiniLM-mse  titles-MiniLM-nbow-mse  titles-nbow-nbow-mnrl  titles-no-embedder-mnrl  titles-no-embedder-mse
data/: .gitignore  call_igraph.pkl.dvc  call_records.csv.dvc  codebert_prototypes.json.dvc  fasttext_prototypes.json.dvc  ir_metrics.md  ir_metrics.md.dvc  module_import_corpus.csv.dvc  paperswithcode_scraped_tasks.csv.dvc  paperswithcode_tasks.csv.dvc  python_files.csv.dvc  wiki-news-300d-1M.vec.dvc
dependency_graph_visualization/: app.py
dependency_parsing/: Cargo.toml
docs/: Gemfile  _config.yml
ghs_ex/: mix.exs
github_search/: Dep_Records_Exploration.py  None.py  Retrieval.py  __init__.py  _nbdev.py  beir_evaluation.py  bow_baseline.py  comments_baseline.py  core.py  data_engineering.py  data_utils.py  decorators.py  dep_records_exploration.py  elixir_runner.py  embedding_utils.py  evaluation.py  experiment_managers.py  exploration.py  file_attention.py  file_selection.py  github_api.py  github_crawling.py  github_readmes.py  gradio_searcher.py  graph_data.py  graph_nn_training.py  graph_sage_data.py  haystack_code_search.py  import_data.py  import_exploration.py  information_retrieval_baseline.py  ir_utils.py  latex_utils.py  librarian.py  lm_utils.py  logging_setup.py  matching_zsl.py  ml_data_utils.py  module_embedding_exploration.py  neo4j_graph.py  (+44 more)
notebooks/: 0.Results.ipynb  03_BEIR_Evaluation.ipynb  04_Metric_Comparison_v2.ipynb  06_Evaluation.ipynb  BEIR_Evaluation.ipynb  Beam_Preprocessing.ipynb  Code2Documentation.ipynb  CodeSearchNet_Repository_Descriptions.ipynb  Code_Prototypes.ipynb  Crawling Github.ipynb  Data_Map_Plot_Topic_Model.ipynb  Exploration_Processed_Data.ipynb  Exploration_Python.ipynb  File_Attention.ipynb  Github Stars Basic Exploration.ipynb  Github_Language_Model_Data.ipynb  Github_READMEs.ipynb  HMDS.ipynb  IR_Title_Baseline.ipynb  Import Exploration.ipynb  Import2Vec embeddings exploration.ipynb  Import2Vec model.ipynb  Matching_ZSL.ipynb  Metric_Comparison_v2.ipynb  MetricsAnalysis.py  MetricsResults.ipynb  Metrics_Comparison.ipynb  Model_Playground.ipynb  Node_Embedding_Evaluation.ipynb  PapersWithCode_Tasks.ipynb  Paperswithcode Repositories.ipynb  Parsing imports.ipynb  Python_Function_Call_Graph.ipynb  Python_Tokens.ipynb  Pytorch_Geometric_Graphs.ipynb  Query_Comment_Embeddings.ipynb  README_Generation_Report.ipynb  Repository Graph from imports.ipynb  Retrieval.ipynb  Searching code with haystack.ipynb  (+7 more)
org/: bm25_ir.org  call_graph_extraction.org  call_graph_visualization.org  chatgpt_prompting.org  datasets.org  extracting_dependency_records.org  graph_records.jl  graphs.org  json_utils.py  llama_prompting.py  llama_prompts.org  llama_results.json  merging_ir_evaluation.org  metrics_experiment.org  pipeline_debugging.org  pipeline_docs.org  prompt_info.py  promptify_runner.py  promptify_utils.py  prompting.org  prompting.py  pwc_tasks.org  record_writer.py  (+2 more)
(+193 files in other folders)
