[project]
name = "github-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aider>=0.2.6",
    "arize-phoenix>=3.25.0",
    "beir>=2.0.0",
    "comment-parser>=1.2.4",
    "dagster>=1.6.5",
    "dspy-ai>=2.4.5",
    "einops>=0.8.0",
    "fastparquet>=2024.11.0",
    "fire>=0.7.0",
    "flash-attention>=1.0.0",
    "ipykernel==6.26.0",
    "metaflow>=2.12.25",
    "mlflow==2.16.2",
    "mlutil",
    "numba>=0.60.0",
    "openinference-instrumentation-dspy==0.1.6",
    "pandera>=0.20.4",
    "ploomber>=0.23.3",
    "polars>=1.15.0",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers==3.3.1",
    "toolz>=1.0.0",
    "transformers>=4.46.2",
    "typing-extensions>=4.12.2",
]

[tool.uv]
prerelease = "allow"
dev-dependencies = ["dagster-webserver>=1.6.5"]

[tool.uv.sources]
mlutil = { git = "https://github.com/lambdaofgod/mlutil" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "b5a557e5fe2d015bd36214a95878370eaed51571" }
#visutils = { path = "../visualization" }

[tool.dagster]
code_location_name = "github_search"
module_name = "github_search.pipelines.dagster.definitions"
