[project]
name = "github-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider>=0.2.6",
    "astunparse>=1.6.3",
    "beir==2.0.0",
    "comment-parser>=1.2.4",
    "dagster>=1.6.5",
    "datasets>=2.14.4",
    "dspy-ai==2.4.5",
    "dspy==3.0.1",
    "einops>=0.8.0",
    "fastparquet>=2024.11.0",
    "fire>=0.7.0",
    "flash-attention>=1.0.0",
    "ipykernel==6.26.0",
    "metaflow>=2.12.25",
    "mlflow==2.16.2",
    "mlutil",
    "numba>=0.60.0",
    "ollama>=0.3.3",
    "openinference-instrumentation-dspy==0.1.6",
    "openinference-instrumentation-litellm>=0.1.22",
    "pandera>=0.20.4",
    "ploomber>=0.23.3",
    "plotly>=6.2.0",
    "polars>=1.15.0",
    "pygithub>=2.6.1",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
    "statsmodels>=0.14.5",
    "strawberry-graphql>=0.262.4",
    #"tgutil",
    "toolz>=1.0.0",
    "transformers>=4.46.2",
    "typing-extensions>=4.12.2",
    "umap-learn>=0.5.9.post2",
    "arize-phoenix-otel>=0.13.0",
    "sentence-transformers>=5.1.0",
    "tgutil",
    "ratelimit>=2.2.1",
    "vulture>=2.14",
    "black>=25.1.0",
]

[tool.uv]
prerelease = "allow"
dev-dependencies = ["dagster-webserver>=1.6.5"]

[tool.uv.sources]
mlutil = { git = "https://github.com/lambdaofgod/mlutil" }
#transformers = { git = "https://github.com/huggingface/transformers.git", rev = "b5a557e5fe2d015bd36214a95878370eaed51571" }
#tgutil = { path = "../tgutil" }
pytrec-eval = { git = "https://github.com/cvangysel/pytrec_eval" }
tgutil = { path = "../tgutil" }
#visutils = { path = "../visualization" }

[tool.dagster]
code_location_name = "github_search"
module_name = "github_search.pipelines.dagster.definitions"

[tools.setuptools]
packages = ["github_search"]
package-dir = {"" = "github_search"}
